week1/assignment_perimeter/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
17
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\javafx-base-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-base-20.0.1.jar;C:\Program Files\BlueJ\lib\javafx-controls-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-controls-20.0.1.jar;C:\Program Files\BlueJ\lib\javafx-fxml-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-fxml-20.0.1.jar;C:\Program Files\BlueJ\lib\javafx-graphics-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-graphics-20.0.1.jar;C:\Program Files\BlueJ\lib\javafx-media-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-media-20.0.1.jar;C:\Program Files\BlueJ\lib\javafx-swing-20.0.1-win.jar;C:\Program Files\BlueJ\lib\javafx-web-20.0.1-win.jar;C:\Program Files\BlueJ\lib\junit-4.12.jar;C:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\opentest4j-1.2.0.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\javafx.web.jar;C:\Users\pjang\Documents\GitHub\OOP-in-Java\week1\assignment_perimeter
-d
C:\Users\pjang\Documents\GitHub\OOP-in-Java\week1\assignment_perimeter\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\pjang\Documents\GitHub\OOP-in-Java\week1\assignment_perimeter\PerimeterAssignmentRunner.java
<---- end of javadoc command ---->
Loading source file C:\Users\pjang\Documents\GitHub\OOP-in-Java\week1\assignment_perimeter\PerimeterAssignmentRunner.java...
Constructing Javadoc information...
C:\Users\pjang\Documents\GitHub\OOP-in-Java\week1\assignment_perimeter\PerimeterAssignmentRunner.java:5: error: cannot find symbol
    public double getPerimeter (Shape s) {
                                ^
  symbol:   class Shape
  location: class PerimeterAssignmentRunner
C:\Users\pjang\Documents\GitHub\OOP-in-Java\week1\assignment_perimeter\PerimeterAssignmentRunner.java:23: error: cannot find symbol
    public int getNumPoints (Shape s) {
                             ^
  symbol:   class Shape
  location: class PerimeterAssignmentRunner
C:\Users\pjang\Documents\GitHub\OOP-in-Java\week1\assignment_perimeter\PerimeterAssignmentRunner.java:33: error: cannot find symbol
    public double getAverageLength(Shape s) {
                                   ^
  symbol:   class Shape
  location: class PerimeterAssignmentRunner
C:\Users\pjang\Documents\GitHub\OOP-in-Java\week1\assignment_perimeter\PerimeterAssignmentRunner.java:41: error: cannot find symbol
    public double getLargestSide(Shape s) {
                                 ^
  symbol:   class Shape
  location: class PerimeterAssignmentRunner
C:\Users\pjang\Documents\GitHub\OOP-in-Java\week1\assignment_perimeter\PerimeterAssignmentRunner.java:56: error: cannot find symbol
    public double getLargestX(Shape s) {
                              ^
  symbol:   class Shape
  location: class PerimeterAssignmentRunner
C:\Users\pjang\Documents\GitHub\OOP-in-Java\week1\assignment_perimeter\PerimeterAssignmentRunner.java:1: error: package edu.duke does not exist
import edu.duke.*;
^
6 errors
